--- a/src/app/financial-insights/financial-insights.component.scss
+++ b/src/app/financial-insights/financial-insights.component.scss
@@ -1,5 +1,3 @@
-/* financial-insights.component.scss */
-
 :host {
     display: block;
     background-color: #e0f7fa;
@@ -8,7 +6,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     margin: 20px auto;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
     h2 {
         color: #006064;
@@ -17,24 +15,28 @@
         font-size: 24px;
     }
 
-    label {
-        display: block;
-        margin-bottom: 10px;
-        color: #004d40;
-        font-weight: bold;
-    }
+    .form-group {
+        margin-bottom: 15px;
 
-    input {
-        width: calc(100% - 20px);
-        padding: 10px;
-        margin-bottom: 20px;
-        border: 2px solid #004d40;
-        border-radius: 5px;
-        outline: none;
-        transition: border-color 0.3s;
+        label {
+            display: block;
+            margin-bottom: 5px;
+            color: #004d40;
+            font-weight: bold;
+        }
 
-        &:focus {
-            border-color: #00796b;
+        input {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 2px solid #004d40;
+            border-radius: 5px;
+            outline: none;
+            transition: border-color 0.3s;
+
+            &:focus {
+                border-color: #00796b;
+            }
         }
     }
 
@@ -51,6 +53,10 @@
         &:hover {
             background-color: #00796b;
         }
+
+        &:not(:last-child) {
+            margin-bottom: 10px;
+        }
     }
 
     p {
@@ -58,5 +64,48 @@
         color: #004d40;
         font-weight: bold;
         margin-top: 20px;
+    }
+
+    h3 {
+        color: #006064;
+        text-align: center;
+        margin-top: 20px;
+        font-size: 18px;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+
+        li {
+            color: #004d40;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+    }
+
+    /* Responsive styles */
+    @media (max-width: 768px) {
+        max-width: 100%;
+        padding: 15px;
+        box-shadow: none;
+        background-color: #ffffff;
+
+        h2 {
+            font-size: 20px;
+        }
+
+        h3 {
+            font-size: 16px;
+        }
+
+        .form-group input {
+            width: calc(100% - 10px);
+        }
+
+        button {
+            padding: 8px;
+        }
     }
 }
