--- a/src/app/budget-planner/dashboard/dashboard.component.scss
+++ b/src/app/budget-planner/dashboard/dashboard.component.scss
@@ -43,6 +43,25 @@ body {
   align-items: center;
 }
 
+.alert {
+  margin-top: 10px;
+  padding: 15px;
+  background-color: #ffcccc;
+  /* Light red */
+  border-left: 5px solid #ff0000;
+  /* Red border */
+  border-radius: 5px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+.alert-warning mat-icon {
+  color: #ff0000;
+  /* Red icon */
+  margin-right: 10px;
+}
+
 .icon {
   display: flex;
   align-items: center;
