--- a/src/app/budget-planner/expense/expense.component.html
+++ b/src/app/budget-planner/expense/expense.component.html
@@ -14,6 +14,7 @@
                     <option value="March">March</option>
                     <option value="July">July</option>
                     <option value="August">August</option>
+                    <option value="September">September</option>
                 </select>
             </div>
             <div class="total-expense">
