--- a/src/app/budget-planner/loan/loan.component.scss
+++ b/src/app/budget-planner/loan/loan.component.scss
@@ -2,7 +2,7 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 25px;
-    background: #ffffff;
+    background: #f2f4f5;
     border-radius: 15px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     color: #333;
