--- a/src/app/budget-planner/todo/todo.component.html
+++ b/src/app/budget-planner/todo/todo.component.html
@@ -13,6 +13,7 @@
                     <option value="February">February</option>
                     <option value="March">March</option>
                     <option value="July">July</option>
+                    <option value="September">September</option>
                 </select>
             </div>
             <div class="total-todoTrans">
