Updated email service

--- a/src/app/budget-planner/dashboard/dashboard.component.html
+++ b/src/app/budget-planner/dashboard/dashboard.component.html
@@ -157,20 +157,39 @@
         <div class="email-list-container" *ngIf="latestEmails.length">
           <h3 class="email-list-title">Latest Emails</h3>
           <ul class="email-list">
-            <li *ngFor="let email of latestEmails" class="email-list-item">
+            <li *ngFor="let email of emailDetails" class="email-list-item">
               <div class="email-header">
                 <strong class="email-from">{{ email.from }}</strong>
                 <span class="email-subject">{{ email.subject }}</span>
               </div>
               <div class="email-body">
                 <span class="email-amount">{{ email.amount }}</span>
+                <span class="email-category">{{ email.category }}</span>
+              </div>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="card">
+      <div class="card-header">
+        <div class="email-details-container" *ngIf="emailDetails.length">
+          <h3 class="email-details-title">Processed Email Details</h3>
+          <ul class="email-details-list">
+            <li *ngFor="let detail of emailDetails" class="email-details-item">
+              <div class="email-details-header">
+                <strong class="email-from">{{ detail.from }}</strong>
+                <span class="email-subject">{{ detail.subject }}</span>
+              </div>
+              <div class="email-details-body">
+                <span class="email-amount">{{ detail.amount }}</span>
+                <span class="email-category">{{ detail.category }}</span>
               </div>
             </li>
           </ul>
         </div>
       </div>
-    </div>
-
+    </div> -->
     <div *ngIf="!latestEmails.length">
       <p>No new emails</p>
     </div>
