--- a/src/app/budget-planner/dashboard/dashboard.component.scss
+++ b/src/app/budget-planner/dashboard/dashboard.component.scss
@@ -138,7 +138,7 @@ h2 {
 }
 
 .button:hover {
-  background: #72dcb0;
+  background: #47b688;
   transform: translateY(-2px);
 }
 
@@ -196,7 +196,7 @@ h2 {
   border-radius: 12px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   padding: 25px;
-  max-width: 800px;
+  max-width: 750px;
   margin: 30px auto;
 }
 
@@ -218,7 +218,7 @@ h2 {
 .email-list-item {
   background-color: #f9f9f9;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
   margin-bottom: 12px;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
@@ -252,8 +252,62 @@ h2 {
   align-items: center;
 }
 
+
+
 .email-amount {
   font-size: 20px;
   color: #007bff;
   font-weight: bold;
+}
+
+.email-category {
+  font-style: italic;
+  padding: 10px;
+  margin-left: 130px;
+  color: #1a1a1a;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+@media (max-width: 768px) {
+  .email-list-container {
+    padding: 15px;
+    margin: 15px;
+  }
+
+  .email-list-title {
+    font-size: 20px;
+  }
+
+  .email-list-item {
+    padding: 8px;
+    margin-bottom: 10px;
+  }
+
+  .email-header {
+    flex-direction: column;
+  }
+
+  .email-from {
+    font-size: 18px;
+  }
+
+  .email-subject {
+    font-size: 16px;
+    margin-top: 5px;
+  }
+
+  .email-body {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .email-amount {
+    font-size: 18px;
+  }
+
+  .email-category {
+    margin-left: 0;
+    font-size: 18px;
+  }
 }
