--- a/src/app/budget-planner/income/income.component.html
+++ b/src/app/budget-planner/income/income.component.html
@@ -8,23 +8,28 @@
         <form [formGroup]="incomeForm" (ngSubmit)="onSubmit()" class="input-form">
             <div class="form-group">
                 <select formControlName="month" id="month" class="form-control" (change)="onChange($event)">
-                    <option value="" disabled selected>Select Month</option>
+                    <option value="" disabled>Select Month</option>
                     <option value="January">January</option>
                     <option value="February">February</option>
                     <option value="March">March</option>
+                    <option value="April">April</option>
+                    <option value="May">May</option>
+                    <option value="June">June</option>
                     <option value="July">July</option>
                     <option value="August">August</option>
                     <option value="September">September</option>
+                    <option value="October">October</option>
+                    <option value="November">November</option>
+                    <option value="December">December</option>
                 </select>
             </div>
             <div class="total-expense">
-                Total expense for {{ selectedMonth }}: ₹{{ calculateTotalIncome() }}
+                Total income for {{ selectedMonth }}: ₹{{ currentMonthIncome | async }}
             </div>
             <div class="form-group">
                 <label for="source">Source of Income:</label>
-                <select formControlName="source" id="source" class="form-control"
-                    [class.disabled-dropdown]="!monthSelected">
-                    <option value="" disabled selected>Select Source</option>
+                <select formControlName="source" id="source" class="form-control">
+                    <option value="" disabled>Select Source</option>
                     <option value="Salary">Salary</option>
                     <option value="Freelancing">Freelancing</option>
                     <option value="Rental Income">Rental Income</option>
@@ -33,19 +38,18 @@
             <div class="form-group">
                 <label for="amount">Amount:</label>
                 <input type="number" formControlName="amount" id="amount" class="form-control"
-                    placeholder="Enter amount" [class.disabled-dropdown]="!monthSelected">
+                    placeholder="Enter amount">
             </div>
             <div class="form-group">
                 <label for="investments">Investments:</label>
-                <select formControlName="investments" id="investments" class="form-control"
-                    [class.disabled-dropdown]="!monthSelected">
-                    <option value="" disabled selected>Select Investments</option>
+                <select formControlName="investments" id="investments" class="form-control">
+                    <option value="" disabled>Select Investments</option>
                     <option value="401(k)">401(k)</option>
                     <option value="Stocks">Stocks</option>
                     <option value="Real Estate">Real Estate</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary" [class.disabled-dropdown]="!monthSelected">Add</button>
+            <button type="submit" class="btn btn-primary">Add</button>
         </form>
 
         <hr>
@@ -59,7 +63,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let income of getFilteredIncomes()">
+                <tr *ngFor="let income of incomes$ | async">
                     <td>{{ income.source }}</td>
                     <td>{{ income.amount }}</td>
                     <td>{{ income.investments }}</td>
