--- a/src/app/budget-planner/dashboard/dashboard.component.html
+++ b/src/app/budget-planner/dashboard/dashboard.component.html
@@ -17,8 +17,9 @@
         </div>
         <div class="month">
           <h3>Current Month: {{ getCurrentMonth() }}</h3>
-          <p> ₹{{ totalCurrentMonthIncome }}</p>
+          <p> ₹{{ totalCurrentMonthIncome + emailIncome }}</p>
         </div>
+
         <button class="button" (click)="onIncome()">View</button>
       </div>
     </div>
@@ -39,11 +40,12 @@
         </div>
         <div class="month">
           <h3>Current Month: {{ getCurrentMonth() }}</h3>
-          <p>₹{{ totalCurrentMonthExpense }}</p>
+          <p>₹{{ totalCurrentMonthExpense + emailExpenses }}</p>
         </div>
         <button class="button" (click)="onExpense()">View</button>
       </div>
     </div>
+
     <div class="card">
       <div class="card-header">
         <span class="icon loan-icon"><mat-icon>account_balance_wallet</mat-icon></span>
@@ -61,6 +63,7 @@
           <h3>Current Month: {{ getCurrentMonth() }}</h3>
           <p>₹{{ totalCurrentMonthLoan }}</p>
         </div>
+        
         <button class="button" (click)="onLoan()">View</button>
       </div>
     </div>
@@ -94,12 +97,12 @@
         <div class="total-item">
           <span class="icon income-icon"><mat-icon>attach_money</mat-icon></span>
           <h3>Current Month Income : </h3>
-          <p>₹{{ totalCurrentMonthIncome }}</p>
+          <p>₹{{ totalCurrentMonthIncome + emailIncome}}</p>
         </div>
         <div class="total-item">
           <span class="icon expense-icon"><mat-icon>money_off</mat-icon></span>
           <h3>Current Month Expense : </h3>
-          <p>₹{{ totalCurrentMonthExpense }}</p>
+          <p>₹{{ totalCurrentMonthExpense + emailExpenses}}</p>
         </div>
         <hr class="total-line">
         <div class="total-item">
