--- a/src/app/budget-planner/todo/todo.component.html
+++ b/src/app/budget-planner/todo/todo.component.html
@@ -14,6 +14,7 @@
                     <option value="March">March</option>
                     <option value="July">July</option>
                     <option value="September">September</option>
+                    <option value="October">October</option>
                 </select>
             </div>
             <div class="total-todoTrans">
